# bottleneckhunter

./: .env.example  .gitignore  CHANGELOG.md  README.md  ai_config_local.example.py  ai_health.py  bh_agent.py  bottleneck.config.example.json  bottleneck_hunter.py  config_loader.py  pyproject.toml  reporting.py  safety.py
.github/workflows/: tests.yml
tests/: test_agent_config.py  test_ai_connection.py  test_ai_output.py  test_cli.py  test_config_loader.py  test_example_config.py  test_interactive.py  test_local_ai_config.py  test_reporting.py  test_safety.py  test_ssl.py
