[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "bottleneckhunter"
version = "1.3.0"
requires-python = ">=3.10"
dependencies = ["pycurl>=7.45.3,<8"]

[project.optional-dependencies]
ai = ["httpx>=0.27,<1", "langchain-core>=0.3,<1", "langchain-openai>=0.3,<1", "python-dotenv>=1,<2"]
browser = ["playwright>=1.50,<2"]
test = ["pytest>=8,<9"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.setuptools]
py-modules = ["ai_health", "bh_agent", "bottleneck_hunter", "config_loader", "reporting", "safety"]
